--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="../images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Welcome to my portfolio 2 site. This is my personal portfolio site showcasing projects I have worked on during the second year of my studies at Noroff Vocational School."
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Barlow+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>My Portfolio 2 | Homepage</title>
   </head>
   <body>
     <div id="root"></div>
